another image fix on mobile

--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -88,7 +88,7 @@
 
    .portfolio-image {
     
-     width: 85%;
+     width: 90%;
     max-width: 320px;
     height: auto;
     
